2009-10-06  rspero@physics.unc.edu
	* Added data filters to load_video_tracking to delete based on minPixelRange, minFrames, tCrop, and xyCrop

2008-05-04  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: added "linear drift vector" mode of subtraction via Adam Shields and Briana Carstens.

2008-11-14  Jeremy Cribb <jcribb@email.unc.edu>
	* batch_load_video_tracking.m: modified documentation to better match Mathworks convention.
	* erase_negatives_in_vrpn.m: same.
	* filter_out_repeats_in_vrpn.m: same.
	* get_bead.m: same.
	* get_beadmax.m: same.
	* load_lasertrap_tracking.m: same.
	* load_laser_tracking.m: same.
	* load_video_tracking.m: same.
	* load_vrpn_tracking.m: same.
	* load_xls_tracking.m: same.
	* plot_vrpn_tracking.m: same.
	* remove_drift.asv: same.
	* remove_drift.m: same.
	* tclip.m: same.
	* tjoin.m: same.
	* video_tracking_constants.m: same.

2008-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: added Ricky's function that selects and removes trackers that fit one or both of these conditions:  the number of tracked points is less than a defined number, or the tracked displacment does not exceed some defined minimum distance.

2008-02-08  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: empty trackers are now automatically removed from ID.

2008-01-11  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: fixed logic error when loading .mat files.

2008-01-07  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: now loads .csv files from video spot tracker.

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: now the center of mass function places an 'S' and a 'E' on the center of mass plot to indicate start and end points for dataset.
	* get_bead.m: added reference to bead ID rather than hard-coded column number.

2006-10-26  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: function now terminates gracefully when input is empty.
